# totoro

./: .env.template  .flake8  .gitignore  .isort.cfg  .poetry.env  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  helper_commands.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  test.py
external_services/: apps.py  conftest.py
external_services/api_clients/: ghibli_api.py
external_services/tests/test_api_clients/: test_ghibli_api.py
movies/: conftest.py  exceptions.py  services.py  urls.py  views.py
movies/tests/: test_services.py  test_views.py
totoro_app/: settings.py  urls.py  wsgi.py
